frontend/test/should_fail/bitbucket30_002.grg
sequence EmitSetUEdgeReverseFail {
     {s:set<AEdge>=edges(UEdge); emit("1 value of attribute 5 6 " + s + "\n")}
}
